example-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sample-service # Name of the Service
  labels:
    app: sample-app # Labels to identify the Service
spec:
  selector:
    app: sample-app # Label selector to identify which Pods are targeted by this Service
  type: ClusterIP # Type of Service (ClusterIP, NodePort, LoadBalancer, or ExternalName)
  ports:
    - name: http # Name of the port (optional, used for documentation purposes)
      protocol: TCP # Protocol used by the port (TCP or UDP)
      port: 80 # Port number exposed by the Service
      targetPort: 8080 # Port number on the targeted Pods to which traffic is forwarded
